# guess_number_t_bot

./: main.py  pyproject.toml  scores.json
controllers/: start.py
